Re-wrote some HTML and Javascript for better readability. Figured out that a bug existed when hitting the Enter key after selecting allCear button. Still working on solving code, but the code is in a much better place.

--- a/style.css
+++ b/style.css
@@ -107,7 +107,6 @@ button {
 
 /* Button Colors */
 
-#delete,
 #clear {
     background-color: #d18038;
 }
